chore: 최저임금 기반 메세지 템플릿 수정
